[project]
name = "browser-use-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "electricjimi",email = "mail@mail.it"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi (>=0.115.7,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "aiofiles (>=24.1.0,<25.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "browser-use (>=0.1.27,<0.2.0)",
    "playwright (>=1.49.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
